--- a/package.json
+++ b/package.json
@@ -5,9 +5,28 @@
     "@rails/webpacker": "3.5",
     "vue": "^2.5.21",
     "vue-loader": "14.2.2",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "vue-router": "^3.0.1",
+    "vue-resource": "^1.5.1",
+    "vue-gravatar": "^1.3.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "2.11.2",
+    "@coreui/coreui": "^2.1.4",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
+    "@coreui/icons": "0.3.0",
+    "@coreui/vue": "^2.1.0",
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "chart.js": "^2.7.3",
+    "core-js": "^2.6.0",
+    "css-vars-ponyfill": "^1.15.3",
+    "flag-icon-css": "^3.2.0",
+    "font-awesome": "^4.7.0",
+    "perfect-scrollbar": "^1.4.0",
+    "simple-line-icons": "^2.4.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
+    "css-loader": "^0.28.1"
   }
 }
