--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "vue-template-compiler": "^2.5.21",
     "vue-router": "^3.0.1",
     "vue-resource": "^1.5.1",
-    "vue-gravatar": "^1.3.0"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "2.11.2",
+    "vue-gravatar": "^1.3.0",
     "@coreui/coreui": "^2.1.4",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "0.3.0",
@@ -28,5 +25,8 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "css-loader": "^0.28.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
   }
 }
