Username, Fullname and Email filters are working now.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vuetable-2": "next",
     "accounting": "latest",
     "moment": "latest",
-    "semantic-ui-css": "2.4.1"
+    "semantic-ui-css": "2.4.1",
+    "vue-events": "^3.1.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
