--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "accounting": "latest",
     "moment": "latest",
     "semantic-ui-css": "2.4.1",
-    "vue-events": "^3.1.0"
+    "vue-events": "^3.1.0",
+    "vue-notification": "^1.3.14"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
