--- a/package.json
+++ b/package.json
@@ -33,13 +33,30 @@
     "vuetable-2": "next"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.28",
+    "babel-jest": "^23.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "jest": "^23.6.0",
+    "vue-jest": "^3.0.2",
     "webpack-dev-server": "2.11.2"
   },
   "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "app/javascript"
+    ],
     "roots": [
       "spec/javascript"
-    ]
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    }
   },
   "scripts": {
     "test": "jest"
